# medi-pharma

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  demo_e2e.py  demo_results.json  deploy.sh  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
admet_prediction/: __init__.py  engine.py  pk_predictor.py  sa_score.py  toxicity.py
agents/: admet_predictor.py  knowledge_engine.py  lead_optimization.py  molecular_generation.py  one_person_pharma.py  target_discovery.py  virtual_screening.py
backend/: __init__.py  api.py  models.py
data/: clinical-trials.json  demo_compounds.json  demo_targets.json  drug-pipeline.json  formulations.json  local_compound_library.json  market-data.json  patents.json  publications.json  regulatory.json  sample-compounds.json  side-effects.json  targets.json
docs/: COMPETITOR_ANALYSIS.md  LATEST_AI_TECH_STACK.md  README.md  index.html  open-source-ecosystem.md
integrations/: __init__.py  biotite_bridge.py  deepchem_bridge.py  pubchem_bridge.py
knowledge_engine/: __init__.py  clinical_data.py  engine.py  patent_analyzer.py  rag_search.py
lead_optimization/: __init__.py  edits.py  engine.py  multi_param.py
molecular_generation/: __init__.py  engine.py  generators.py  optimizer.py
orchestrator/: __init__.py  decision.py  dmta.py  pipeline.py  reporter.py
scripts/: deploy.sh
src/: admet_prediction.py  app.py  clinical_trial.py  digital_twin.py  drug_combination.py  drug_designer.py  drug_optimizer.py  drug_repurposing.py  drug_screener.py  multi_omics.py  (+7 more)
(+17 files in other folders)
