[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medi-pharma"
version = "2.0.0"
description = "MediPharma — AI驱动药物发现平台，伪装成服务公司的软件公司"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "MoKangMedical"}]
keywords = ["drug-discovery", "ai", "admet", "virtual-screening", "molecular-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "rdkit-pypi>=2024.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "httpx"]
full = [
    "deepchem>=2.8.0",
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "biopython>=1.84",
    "chemprop>=2.0.0",
]

[project.scripts]
medi-pharma = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
